--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="bower_components/aos/dist/aos.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="kTzxULVB"></script>
   <app-root></app-root>
 </body>
 </html>
