- Frontend is 98% working fine, just a few small visual bugs to fix

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CuculiSite</title>
+  <title>Cuculi Records</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="bower_components/aos/dist/aos.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+  <link href="dist/hamburgers.css" rel="stylesheet">
 </head>
 <body>
 <div id="fb-root"></div>
